--- a/style.css
+++ b/style.css
@@ -1,10 +1,15 @@
 html {
   background-color: hsl(240, 20%, 15.69%);
   color: hsl(60, 100%, 99.41%);
+  font-family: 'Roboto', sans-serif;
 
 }
 
 body{
+    margin: 0%;
+}
+
+h3 {
     margin: 0%;
 }
 
@@ -13,6 +18,7 @@ body{
   height: 100vh;
   grid-template-columns: 18vw auto 15vw;
   grid-template-rows: 17vh auto;
+  
 }
 
 .side-bar_wrapper {
@@ -30,6 +36,7 @@ body{
 
 .projects_wrapper {
     grid-row: 2 / -1;
+    padding: 2.5rem 1rem;
 }
 
 .right-side_wrapper{
