--- a/style.css
+++ b/style.css
@@ -17,6 +17,8 @@ h3 {
 
 h4 {
     margin: 0%;
+    font-size: 1.4rem;
+
 }
 
 .dashboard_wrapper {
@@ -80,6 +82,38 @@ h4 {
     background-color: hsl(240,20%,15.69%);
     border-radius: 3px;
     border: 0.5px solid hsl(240,20%,27%);
+}
+
+#search-icon{
+fill: hsl(240,20%,27%);
+}
+
+.notification_wrapper{
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+}
+
+.profile-wrapper{
+    display: flex;
+    align-items: center;
+    gap: 1rem;
+    margin-left: 2rem;
+
+}
+
+.avatar_img{
+    background-image: url(images/avatar.png);
+    background-position: center;
+    background-size: cover;
+    /* background-color: aqua; */
+    width: 3rem;
+    height: 3rem;
+}
+
+#profile-name{
+    font-size: 1.2rem;
+    font-weight: 600;
 }
 
 .projects_wrapper {
