--- a/style.css
+++ b/style.css
@@ -1,35 +1,52 @@
 html {
   background-color: hsl(240, 20%, 15.69%);
   color: hsl(60, 100%, 99.41%);
-  font-family: 'Roboto', sans-serif;
-
+  font-family: "Roboto", sans-serif;
 }
 
-body{
-    margin: 0%;
+body {
+  margin: 0%;
 }
 
 h2 {
-    font-size: 1.7rem;
-    margin: 0%;
+  font-size: 1.7rem;
+  margin: 0%;
 }
 
 h3 {
-    margin: 1.5rem 0rem;
-    font-weight: 500;
-    font-size: 1.6rem;
+  margin: 1.5rem 0rem;
+  font-weight: 500;
+  font-size: 1.6rem;
 }
 
 h4 {
-    margin: 0%;
-    font-size: 1.4rem;
-
+  margin: 0%;
+  font-size: 1.4rem;
 }
 
 p {
-    margin: 0%;
-    font-size: 1.1rem;
-    font-weight: 500;
+  margin: 0%;
+  font-size: 1.1rem;
+  font-weight: 500;
+}
+
+button {
+  background-color: hsl(142.74, 48.72%, 38.24%);
+  font-family: "Roboto", sans-serif;
+  font-weight: 400;
+  color: hsl(60, 100%, 99.41%);
+  border: none;
+  font-size: 1.1rem;
+  padding: 0.7rem 2rem;
+  border-radius: 3px;
+  transition: 0.2s;
+}
+
+button:hover {
+  background-color: hsl(142.74, 48.72%, 35.24%);
+}
+button:active {
+  background-color: hsl(142.74, 48.72%, 32.24%);
 }
 
 .dashboard_wrapper {
@@ -37,148 +54,151 @@ p {
   height: 100vh;
   grid-template-columns: 18vw auto 18vw;
   grid-template-rows: 23vh auto;
-  
 }
 
 .side-bar_wrapper {
-    background-color: hsl(142.74,48.72%,38.24%);
-    grid-row: 1 / -1;
-    padding: 0.7rem 1rem;
-    
+  background-color: hsl(142.74, 48.72%, 38.24%);
+  grid-row: 1 / -1;
+  padding: 0.7rem 1rem;
 }
 
-.logo_wrapper{
-    display: flex;
-    align-items: center;
-    gap: 0.5rem;
-    margin-bottom: 3rem;
+.logo_wrapper {
+  display: flex;
+  align-items: center;
+  gap: 0.5rem;
+  margin-bottom: 3rem;
 }
 
-#logo-img{
-    width: 3rem;
-    fill: hsl(60,100%,99.41%);
+#logo-img {
+  width: 3rem;
+  fill: hsl(60, 100%, 99.41%);
 }
 
-.side-menu_wrapper{
-    display: grid;
-    row-gap: 0.3rem;
-    grid-auto-rows: 3rem;
-    /* grid-auto-rows: auto; */
+.side-menu_wrapper {
+  display: grid;
+  row-gap: 0.3rem;
+  grid-auto-rows: 3rem;
+  /* grid-auto-rows: auto; */
 }
 
-.menu-items{
-    display: flex;
-    align-items: center;
-    gap: 1rem;
+.menu-items {
+  display: flex;
+  align-items: center;
+  gap: 1rem;
 }
 
-.menu-icon{
-    fill: hsl(60,100%,99.41%);
-    width: 2rem;
+.menu-icon {
+  fill: hsl(60, 100%, 99.41%);
+  width: 2rem;
 }
 
 .nav-bar_wrapper {
-    background-color: hsl(240,20%,19%);
-    display: grid;
-    row-gap: 1.7rem;
-    grid-template-columns: 40vw auto;
-    grid-template-rows: 3.7rem 1fr;
-    padding: 1.7rem 3rem;
-    grid-column: 2 / 4;
+  background-color: hsl(240, 20%, 19%);
+  display: grid;
+  row-gap: 1.7rem;
+  grid-template-columns: 40vw auto;
+  grid-template-rows: 3.7rem 1fr;
+  padding: 1.7rem 3rem;
+  grid-column: 2 / 4;
 }
 
-.search-bar_wrapper{
-    display: flex;
-    padding: 0rem 1rem;
-    align-items: center;
-    background-color: hsl(240,20%,15.69%);
-    border-radius: 3px;
-    border: 0.5px solid hsl(240,20%,27%);
+.search-bar_wrapper {
+  display: flex;
+  padding: 0rem 1rem;
+  align-items: center;
+  background-color: hsl(240, 20%, 15.69%);
+  border-radius: 3px;
+  border: 0.5px solid hsl(240, 20%, 27%);
 }
 
-#search-icon{
-fill: hsl(240,20%,27%);
+#search-icon {
+  fill: hsl(240, 20%, 27%);
 }
 
-.notification_wrapper{
-    display: flex;
-    align-items: center;
-    justify-content: flex-end;
+.notification_wrapper {
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
 }
 
-.profile-wrapper{
-    display: flex;
-    align-items: center;
-    gap: 1rem;
-    margin-left: 2rem;
-
+.profile-wrapper {
+  display: flex;
+  align-items: center;
+  gap: 1rem;
+  margin-left: 2rem;
 }
 
-.avatar_img{
-    background-image: url(images/avatar.png);
-    background-position: center;
-    background-size: cover;
-    /* background-color: aqua; */
-    width: 3rem;
-    height: 3rem;
+.avatar_img {
+  background-image: url(images/avatar.png);
+  background-position: center;
+  background-size: cover;
+  /* background-color: aqua; */
+  width: 3rem;
+  height: 3rem;
 }
 
-#profile-name{
-    font-size: 1.2rem;
-    font-weight: 600;
+#profile-name {
+  font-size: 1.2rem;
+  font-weight: 600;
 }
 
-.profile-info_wrapper{
-    display: flex;
-    align-items: center;
+.profile-info_wrapper {
+  display: flex;
+  align-items: center;
 }
 
-.profile-name_wrapper{
-    display: flex;
-    flex-direction: column;
-    row-gap: 0.5rem;
+.profile-name_wrapper {
+  display: flex;
+  flex-direction: column;
+  row-gap: 0.5rem;
 }
 
-.main-avatar{
-    height: 5rem;
-    width: 5rem;
-    margin-right: 2rem;
+.main-avatar {
+  height: 5rem;
+  width: 5rem;
+  margin-right: 2rem;
+}
+
+.nav-options_wrapper {
+  display: flex;
+  column-gap: 2rem;
+  justify-content: end;
+  align-items: center;
 }
 
 .projects_wrapper {
-    display: flex;
-    flex-direction: column;
-    grid-row: 2 / -1;
-    padding: 3rem 3rem;
-
+  display: flex;
+  flex-direction: column;
+  grid-row: 2 / -1;
+  padding: 3rem 3rem;
 }
 
-.projects_container{
-    display: grid;
-    /* overflow: auto; */
-    /* overflow-y: scroll; */
-    flex-grow: 1;
-    gap: 1.5rem;
-    grid-template-columns: repeat(auto-fit, minmax(20rem, 1fr));
-    grid-template-rows: repeat(minmax(15rem, 1fr));
-    grid-auto-rows: auto;
+.projects_container {
+  display: grid;
+  /* overflow: auto; */
+  /* overflow-y: scroll; */
+  flex-grow: 1;
+  gap: 1.5rem;
+  grid-template-columns: repeat(auto-fit, minmax(20rem, 1fr));
+  grid-template-rows: repeat(minmax(15rem, 1fr));
+  grid-auto-rows: auto;
 }
 
-.project-card{
-    background-color: hsl(240,20%,19%);
-    border-top:  solid hsl(142.74,48.72%,38.24%);
-    border-radius: 3px;
-    transition: 0.2s;
+.project-card {
+  background-color: hsl(240, 20%, 19%);
+  border-top: solid hsl(142.74, 48.72%, 38.24%);
+  border-radius: 3px;
+  transition: 0.2s;
 }
 
-.project-card:hover{
-    border-top: 5px solid hsl(142.74,48.72%,38.24%);
+.project-card:hover {
+  border-top: 5px solid hsl(142.74, 48.72%, 38.24%);
 }
 
-.project-card:active{
-    border-top: 10px solid hsl(142.74,48.72%,38.24%);
+.project-card:active {
+  border-top: 10px solid hsl(142.74, 48.72%, 38.24%);
 }
 
-.right-side_wrapper{
-    grid-row: 2 / -1;
+.right-side_wrapper {
+  grid-row: 2 / -1;
 }
