--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@ h2 {
 h3 {
   margin: 1.5rem 0rem;
   font-weight: 500;
-  font-size: 1.6rem;
+  font-size: 1.5rem;
 }
 
 h4 {
@@ -26,8 +26,20 @@ h4 {
 
 p {
   margin: 0%;
-  font-size: 1.1rem;
+  font-size: 1rem;
   font-weight: 500;
+  margin: 6px 0px;
+}
+
+.p-light{
+    font-size: 0.9rem;
+    font-weight: 200;
+    opacity: 90%;
+}
+
+.p-heavy{
+    font-size: 1.1rem;
+    font-weight: 500;
 }
 
 button {
@@ -201,4 +213,27 @@ button:active {
 
 .right-side_wrapper {
   grid-row: 2 / -1;
+  padding: 3rem 3rem 3rem 0rem;
+}
+
+.announcements-card{
+    background-color: hsl(240, 20%, 19%);
+    padding: 2rem;
+    border-radius: 3px;
+}
+
+.announce_wrapper{
+    /* margin-bottom: 1.5rem; */
+}
+
+.trending-card{
+    background-color: hsl(240, 20%, 19%);
+    padding: 1rem;
+    border-radius: 3px;
+}
+
+.divider{
+    height: 0.5px;
+    background-color: hsl(240, 20%, 27%);
+    margin: 1.3rem 0rem;
 }
